--- a/Index.html
+++ b/Index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Telugu:wght@100..900&family=Orbitron:wght@400..900&family=Rubik+Wet+Paint&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Orbitron:wght@400..900&family=Rubik+Wet+Paint&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./Calender_Task.css">
-    <script src="./Calender_Task.js" defer></script>
+    <link rel="stylesheet" href="Calender_Task.css">
+    <script src="Calender_Task.js" defer></script>
 </head>
 <body>
     <div id="container">
